--- a/WebServerBeetCore/appsettings.json
+++ b/WebServerBeetCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Igor\\Desktop\\Diplom\\BackEnd\\Beet\\WebServerBeetCore\\AppData\\BeetDb.mdf;Integrated Security=True;Connect Timeout=30;"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Igor\\Desktop\\BeetBack\\WebServerBeetCore\\AppData\\BeetDb.mdf;Integrated Security=True;Connect Timeout=30;"
   },
 
 
