--- a/.gitignore
+++ b/.gitignore
@@ -326,8 +326,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-#image video
-*.jpg   binary
-*.png   binary
-*.gif   binary
-*.mp4   binary
+#video 
+*.mp4   
